--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,7 +5,7 @@ description: A http server
 # author: Your Name <synwe@yahoo.com>
 
 environment:
-  sdk: '>=2.2.0 <3.0.0'
+  sdk: ^3.5.4
 
 #dependencies:
 #  path: ^1.4.1
